--- a/garden/note/2022050901.md
+++ b/garden/note/2022050901.md
@@ -1,3 +1,4 @@
+---
 public:: true  
 title:: Zettelkasten  
 alias:: 卡片盒笔记系统  
@@ -7,6 +8,9 @@ author:: Zhangli
 tags::  
 type:: Note  
 description:: "Zettelkasten简介"  
+---
+
+# Zettelkasten
 
 - ## Zettelkasten
 	- Zettelkasten，中文翻译为卡片盒笔记系统，由德国当代最为重要的社会学家尼克拉斯·卢曼(Niklas Luhmann)（1927年12月8日-1998年11月6日）创造的笔记工具。
