--- a/zettel/zettel/2018122601.md
+++ b/zettel/zettel/2018122601.md
@@ -4,8 +4,10 @@ file:: 2018122601.md
 ---
 
 # Git
-- Git 是一个开放源码的版本控制软件
-- Git采用了分布式版本库的方式，不必服务器端软件支持
+
+- ## Zettel
+    - Git 是一个开放源码的版本控制软件
+    - Git采用了分布式版本库的方式，不必服务器端软件支持
 
 - ## Links
 
