--- a/zettel/zettel/2018122603.md
+++ b/zettel/zettel/2018122603.md
@@ -1,7 +1,6 @@
----
-alias:: GitHub Hexo Next搭建博客  
-file:: 2018122603.md  
----
+title:: GitHub Hexo Next搭建博客
+alias:: 
+tags:: Hexo, Github, Next
 
 # GitHub Hexo Next搭建博客
 
