--- a/zettel/zettel/2022042901.md
+++ b/zettel/zettel/2022042901.md
@@ -1,18 +1,9 @@
----
-public: true  
-title: Logseq的Markdown模板  
-alias:   
-date: 20220429  
-author: ZhangLi  
-tags: Markdown, Logseq  
-type: Zettel  
-description: Logseq的Markdown模板  
----
+title:: Logseq的Markdown模板
+alias:: 
+tags:: Markdown, Logseq
 
-# Logseq的Markdown模板
-
+- ## Logseq的Markdown模板
 ## Note
-
 ## Excerpt
 ## Question
 ## Extension
