--- a/zettel/zettel/2022051102.md
+++ b/zettel/zettel/2022051102.md
@@ -1,18 +1,9 @@
----
-public: true  
-title: Evergreen note  
-alias: 常青笔记,永久笔记  
-date: 20220511  
-author: ZhangLi  
-tags:   
-type: Zettel  
-description: Evergreen note简介  
----
+title:: Evergreen note
+alias:: 常青笔记,永久笔记
+tags:: 
 
-# Evergreen note
-
-## Note
-
+- ## Evergreen note
+- ## Note
 - ## Excerpt
 - ## Question
 - ## Extension
