--- a/zettel/zettel/2018122602.md
+++ b/zettel/zettel/2018122602.md
@@ -1,9 +1,10 @@
----
-alias:: Hello World  
-file:: 2018122602.md  
----
+title:: Hello World
+alias:: 
+tags:: Hexo, Github
 
-# Hello World  
+
+- ## Hello World
+
     - Welcome to [Hexo](https://hexo.io/)! This is your very first post. Check [documentation](https://hexo.io/docs/) for more info. If you get any problems when using Hexo, you can find the answer in [troubleshooting](https://hexo.io/docs/troubleshooting.html) or you can ask me on [GitHub](https://github.com/hexojs/hexo/issues).
 
 - ## Quick Start
