--- a/zettel/zettel/2022051103.md
+++ b/zettel/zettel/2022051103.md
@@ -1,18 +1,8 @@
----
-public: true  
-title: P.A.R.A  
-alias:   
-date: 20220511  
-author: ZhangLi  
-tags:   
-type: Zettel  
-description: P.A.R.A简介  
----
+title:: P.A.R.A
+alias:: 
+tags:: 
 
-# P.A.R.A
-
-## Note
-
-## Links
-## Reference
+- ## P.A.R.A
+- ## Links
+- ## Reference
 	- [P.A.R.A. 是什么及在 Notion 中的应用](https://sspai.com/post/61459)
