--- a/zettel/zettel/2018122601.md
+++ b/zettel/zettel/2018122601.md
@@ -1,13 +1,13 @@
-title:: Git
-alias:: 
-tags:: 
-
 # Git
+
+## Zettel
     - Git 是一个开放源码的版本控制软件
     - Git采用了分布式版本库的方式，不必服务器端软件支持
 
+## Excerpt
+## Question
+## Extension
 ## Links
-
 ## Reference
     - [Git Downloads](https://git-scm.com/downloads)
     - [Git Documentation](https://git-scm.com/doc)
