--- a/zettel/zettel/2022050101.md
+++ b/zettel/zettel/2022050101.md
@@ -1,25 +1,27 @@
+---
 title:: Logseq
 alias:: 
 tags:: 
+---
 
 # Logseq
 
-- Logseq是一款开源离线的笔记应用
+## Zettel
+    - Logseq是一款开源离线的笔记应用
     - 采用大纲结构
 	- 双向链接
 	- 细粒度为block
 	- 采用Markdown语言
     - Logseq关联Zotero
 
-## Links to this note
-
-## Links from this note
-
-- [Logseq的Markdown模板](2022042901.md)
+## Excerpt
+## Question
+## Extension
+## Links
+    - [Logseq的Markdown模板](2022042901.md)
 
 ## Reference
-
-- [Logseq github](https://github.com/logseq/logseq)
-- [Logseq Document](https://docs.logseq.com/#/page/Contents)
-- [双链笔记软件推荐：Logseq 和它的五种用法](https://sspai.com/post/69503)
-- [笔记工具推荐之Logseq](https://zhuanlan.zhihu.com/p/418969961)
+    - [Logseq github](https://github.com/logseq/logseq)
+    - [Logseq Document](https://docs.logseq.com/#/page/Contents)
+    - [双链笔记软件推荐：Logseq 和它的五种用法](https://sspai.com/post/69503)
+    - [笔记工具推荐之Logseq](https://zhuanlan.zhihu.com/p/418969961)
