--- a/zettel/zettel/2022051102.md
+++ b/zettel/zettel/2022051102.md
@@ -1,13 +1,15 @@
+---
 title:: Evergreen note
 alias:: 常青笔记,永久笔记
 tags:: 
+---
 
-- ## Evergreen note
-- ## Note
-- ## Excerpt
-- ## Question
-- ## Extension
-- ## Links to this note
-- ## Reference
+# Evergreen note
+## Zettel
+## Excerpt
+## Question
+## Extension
+## Links
+## Reference
     - [【翻译】常青笔记 (Evergreen notes)](https://zhuanlan.zhihu.com/p/416319260)
     - [Evergreen notes](https://notes.andymatuschak.org/z4SDCZQeRo4xFEQ8H4qrSqd68ucpgE6LU155C)
