--- a/zettel/zettel/2022051701.md
+++ b/zettel/zettel/2022051701.md
@@ -1,12 +1,14 @@
+---
 title:: 费曼学习法 
 alias:: 
 tags:: 
+---
 
 # 费曼学习法
-## Note
+## Zettel
 ## Excerpt
 ## Question
 ## Extension
-- ## Links
+## Links
 ## Reference
 	- [世上最强学习方法——费曼学习法（深度学习）](https://zhuanlan.zhihu.com/p/152547764)
