--- a/zettel/zettel/2022050701.md
+++ b/zettel/zettel/2022050701.md
@@ -1,25 +1,22 @@
+---
 title:: Github
 alias:: 
 tags:: 
+---
 
 # Github
 
+## Zettel
 - GitHub是一个基于Git的用于版本控制和协作的代码托管平台
 - Github允许您和其他人随时随地协同处理项目
 - Github 由Chris Wanstrath, PJ Hyett 与Tom Preston-Werner三位开发者在2008年4月创办
 - 登陆网址：[Github](https://github.com/)
 
-
-## Links to this note
-
-- 
-
-## Links from this note
-
-- 
-
+## Excerpt
+## Question
+## Extension
+## Links
 ## Reference
-
 - [Github](https://github.com/)
 - [Github简明教程](http://www.runoob.com/w3cnote/git-guide.html)
 - [GitHub Docs中文](https://docs.github.com/cn) [English](https://docs.github.com/en/get-started/quickstart/git-cheatsheet)
