--- a/zettel/zettel/2022050901.md
+++ b/zettel/zettel/2022050901.md
@@ -1,17 +1,19 @@
+---
 title:: Zettelkasten
 alias:: 卡片盒笔记系统
 tags:: 
+---
 
 # Zettelkasten
 
-- ## Zettelkasten
+## Zettel
 	- Zettelkasten，中文翻译为卡片盒笔记系统，由德国当代最为重要的社会学家尼克拉斯·卢曼(Niklas Luhmann)（1927年12月8日-1998年11月6日）创造的笔记工具。
 	- Zettelkasten将单个笔记卡片(Zettel)结构化为唯一标识符、原子化的笔记正文、参考文献三部分。
 	- Zettelkasten系统中，对单张笔记卡片不按照主题和子主题进行系统的排序，而是选择一个牢固的固定位置（Stellordnung），保持系统的独立性。
 	- 在单张笔记卡片间尽可能多的建立连接并明确说明连接的原因，每一张笔记卡片的质量只取决于系统内的链接和反向链接的网络，由此创建个性化的由单一想法、看法、灵感、或者遇到的具体的知识共同组成的思想之网(web of thoughts)。
 	- Zettelkasten通过笔记卡片索引、笔记索引表(register) 、枢纽笔记(hub notes)等结构化整个笔记系统，以期创造一个旨在长期、开放、主题不受限制的自我交流系统，成为一种强大的思维工具。
 
-- ## Excerpt
+## Excerpt
 	- 卡片盒笔记法，由尼克拉斯-卢曼(Niklas Luhmann) 创造
 	- 它是目前最强大的思考和笔记工具。
 	- 尼克拉斯-卢曼是一位高产的社会学家，他出版了50本专著和600篇论文，150份未完成的手稿
@@ -43,7 +45,7 @@ tags::
 	- 一张索引卡片  
 	![](https://pic1.zhimg.com/v2-639bb0618e87e2f606ccc4fae97a406a_1440w.jpg)
 
-- ## Question
+## Question
 	- 本篇文章只讨论了笔记的结构，对内容部分仅由作者提了一个建议：输入知识而非信息(Knowledge instead of information) ，这点需要好好的扩充
 	- 未解释枢纽笔记(hub notes)，或未展示枢纽笔记的样本
 	- 文章说：维基百科也不是思想之网，是一个信息检索工具，而非思维工具(thinking tool)。这段怎么理解？
@@ -54,13 +56,13 @@ tags::
 		- 我们正在工作的上下文都会暗示了与其他笔记多种多样的链接，特别是当卡片索引已经很庞大的时候。通过详细阅读[卢曼：与卡片盒交流](https://zhuanlan.zhihu.com/p/208063561)，问题应该已得到解决，这里提到卡片索引，虽未展示笔记索引样本，但这里应该表明有一个笔记的列表，所以这里的固定位置，就是物理上的绝对的固定位置
 	- **已解决**未解释卡片索引，或未展示卡片索引的样本
 
-- ## Extension
+## Extension
 	- [卢曼：学习如何阅读](2022051104.md)
 	- [卢曼：与卡片盒交流](2022051105.md)
 
-- ## Links
+## Links
 
-- ## Reference
+## Reference
 	- [卢曼卡片盒笔记法介绍 (Introduction to the Zettelkasten Method)](https://zettelkasten.de/introduction/zh/)
 		- > 卡片盒笔记系统是一款**个性化**的，用于思考和写作的工具。它具有**超文本**(hypertext)的特点，让你的所思所想互相连接形成网络。与其他系统不同的是，你创造的是一张由你的想法、看法、灵感、或者遇到的具体的知识组成的**思想之网**(web of thoughts)，而不是孤立的笔记。它强调笔记之间的**连接关系**，而非把所有笔记堆在一起。
 		  如果解决某个问题的方式有好几种，我们只需通过一个链接将这些可能性联系起来。通常，笔记中的一条笔记中有多个链接与好几个其他笔记相连。在这种情况下，我们不但要建立**正向的链接**，还应该在被链接的笔记中建立**反向链接**(backlinks)。在这个过程中，我们会发现所写的笔记内容也会越来越丰富。
