--- a/zettel/zettel/2022051104.md
+++ b/zettel/zettel/2022051104.md
@@ -1,11 +1,16 @@
+---
 title:: 卢曼：学习如何阅读
 alias:: 
 tags:: Zettelkasten
+---
 
-- ## 卢曼：学习如何阅读
+# 卢曼：学习如何阅读
+
+## Zettel
 	- 区分不同文本采用不同的阅读方法
 	- 理论文章中充斥着大量不受概念约束的词语，只有**一小部分**是表述重要概念的词语。人们可以记住这些名字，但这样几乎学习不到概念的**联系**，也可以在某一主题上大量阅读，但学习到的新东西会很快被取代并忘记，因此阅读理论文章需要**长期记忆**。学习理论文章需要有选择性地阅读，并且能够调用广泛的相互关联的参考资料，必须能够理解递归。
 	- 学习理论文章比较好的解决方法是：立足于已知的东西，即长期记忆，找到那些值得记录的东西，发挥自己的想象力，区分文本没有或者没有明确的回答其所陈述的问题的另一面，记笔记，简明扼要地重新表述所读内容，更多的回归到写作本身上，并建立起[Zettelkasten](2022050901.md)卡片盒笔记系统。
+
 ## Excerpt
 	- 文本有许多不同的类型，阅读这些文本的方式也各不相同。从某种意义上说，专门阅读某种类型文本的习惯，会降低阅读其他类型文本的能力。
 		- 小说的特点是难以区分真实的现实和虚构的现实 。在小说中，文本的统一性源于张力的产生，它是由读者不断意识到的对未来的无知带来的；同时也源于张力的消解，正如让-保罗所指出的那样，张力的消解取决于读者是否能重现已经阅读过的文本。读者面对的是已经知道自己还不知道的悖论。小说不仅是在行动的时间维度上发展，同时也是在时间的维度上组织文本，因为它将文本分为了"已经读过"和"还没有读过 "两种。
@@ -24,7 +29,7 @@ tags:: Zettelkasten
 ## Extension
 	- 对小说的描述挺有意思，可以扩展
 	- 诗歌的阅读需要专注的短期记忆和多层次的递归也挺有意思
-- ## Links
+## Links
 	- [Zettelkasten](2022050901.md)
 ## Reference
 	- 尼克拉斯-卢曼(Niklas Luhmann)本人所写的另一篇文章[Learning How to Read](https://luhmann.surge.sh/learning-how-to-read)
