--- a/zettel/zettel/2022051106.md
+++ b/zettel/zettel/2022051106.md
@@ -1,23 +1,24 @@
+---
 title:: Digital Garden
 alias:: 数字花园
 tags:: 
+---
 
 # Digital Garden
 
-- ## Digital Garden
-- ## Note
-- ## Excerpt
-	- 2015年秋天，斯坦福大学举办了一场关于在线教育研究的讲座，来自华盛顿州立大学的麦克·考菲尔德做了一个50分钟的主题演讲，演讲的标题是《花园与溪流：电子田园牧歌》。
+## Zettel
+## Excerpt
+    - 2015年秋天，斯坦福大学举办了一场关于在线教育研究的讲座，来自华盛顿州立大学的麦克·考菲尔德做了一个50分钟的主题演讲，演讲的标题是《花园与溪流：电子田园牧歌》。
 		- 麦克·考菲尔德认为，互联网有两种形态，一种是“花园”，一种是“溪流”。
 		- 花园（Garden）是说，互联网就像一块土地，上面有小路，有花草树木，它们皆有所指。小路就是超链接，让我们在不同网页穿梭，花花草草则是不同的网站。这的确和早期的互联网形态很像，和上面提到的1998年的超文本花园联系上了。
 		- 溪流（Stream）指的就是线性的信息流，各种关注、算法推荐、通知产生的信息流，就像一条条小溪不停流淌。溪流里的信息，上一条和下一条可能并不相关，只是被聚合到了一起。甚至社交网络号称是网络，但呈现在大家面前的还是一条条的信息流。
 		- 考菲尔德得出结论：在溪流模式中，无法承载系统化的知识。
 	- 2018年，一个叫汤姆·克里奇洛的软件工程师写了一篇博客《数字溪流、篝火与花园》，在继承了考菲尔德所提出的两种意象之外，还创造了一个新的意象：数字篝火（Digital Campfire），它的含义又是什么呢？
 		- 克里奇洛说，数字溪流的例子就像推特，数字花园的例子有维基百科，而数字篝火介于两者之间：像是博客、一些slack社群。博客中的知识之光就像篝火一样，随时间逐渐熄灭，社群中的讨论也随时间消逝，但在写博客、参与社群的过程中，他自己获得了成长。
-- ## Question
-- ## Extension
-- ## Links
-- ## Reference
+## Question
+## Extension
+## Links
+## Reference
 	- [什么是数字花园（Digital Garden）？](https://www.zhihu.com/question/400660802)
 	- [https://joelhooks.com/](https://joelhooks.com/)
 	- [Maggie Appleton](https://maggieappleton.com/)
