--- a/zettel/zettel/2018122603.md
+++ b/zettel/zettel/2018122603.md
@@ -1,3 +1,10 @@
+---
+public:: true
+title:: GitHub Hexo Next搭建博客
+alias:: 
+tags:: Hexo,Github,Next,Zettel
+---
+
 # GitHub Hexo Next搭建博客
 
 ## GitHub账号注册
