--- a/zettel/zettel/2022042901.md
+++ b/zettel/zettel/2022042901.md
@@ -1,7 +1,8 @@
 ---
+public:: true
 title:: Logseq的Markdown模板
 alias:: 
-tags:: Markdown, Logseq
+tags:: Markdown,Logseq,Zettel
 ---
 
 # Logseq的Markdown模板
