--- a/zettel/zettel/2018122603.md
+++ b/zettel/zettel/2018122603.md
@@ -9,7 +9,7 @@ tags:: Hexo,Github,Next,Zettel
 
 ## GitHub账号注册
 
-GitHub上新建一个仓库，命名为user.github.io
+- GitHub上新建一个仓库，命名为user.github.io
 
 ## Git安装使用
 
@@ -30,7 +30,7 @@ git config --global user.email "youremail@example.com"
 ssh-keygen -t rsa -C "youremail@example.com"
 ```
 
-测试
+### 测试
 
 ``` bash
 ssh -T git@github.com
@@ -50,7 +50,7 @@ git rm -r --cached X/X
 
 ## Node.js安装配置
 
-使用管理员权限打开命令行工具并且cd到node安装包的项目文件夹，执行下面代码：
+- 使用管理员权限打开命令行工具并且cd到node安装包的项目文件夹，执行下面代码：
 
 ``` bash
 msiexec  /i node-v11.8.0-x86.msi
@@ -76,13 +76,13 @@ hexo -v
 
 ### 初始化
 
-项目目录
+- 项目目录
 
 ``` bash
 hexo init
 ```
 
-安装依赖
+- 安装依赖
 
 ``` bash
 npm install
