--- a/zettel/zettel/2022051105.md
+++ b/zettel/zettel/2022051105.md
@@ -8,8 +8,8 @@ tags:: Zettelkasten,Zettel
 # 卢曼：与卡片盒交流
 
 ## Zettel
-- 尼克拉斯-卢曼(Niklas Luhmann)以系统理论做为预设的前提，从交流理论 (communicative theory) 的方法作为出发点阐述了其[Zettelkasten](2022050901.md)卡片盒笔记系统的实证研究。
-- 信息只有在有**比较模式**的系统中才会产生，为提高交流的有效性，需在交流系统中加入**随机性**，想让一个交流系统要维持更长时间，需创造一个旨在长期、开放、主题不受限制（只有自我限制）的交流系统。长期使用[Zettelkasten](2022050901.md)卡片盒笔记系统，会产生一种第二记忆，一个我们可以不断与之交流的另一个自我。它得到了自己的生命，独立于它的作者。每一张卡片都只是一个组成部分，它的质量只取决于系统内的链接和反向链接的网络。如果你想培养一个交流伙伴，最好从一开始就让他独立。[Zettelkasten](2022050901.md)卡片盒笔记系统可以实现高度的**独立性**。当我们在写笔记或进行查询可以成功地激活**内部链接**网络时，交流就会变得更加富有成效。卡片盒提供了从未计划过的，从未预想过的信息组合的可能性。**与提供可实现连接的可能性的这种结构相比，笔记的重要性是次要的**。
+- 尼克拉斯-卢曼(Niklas Luhmann)以系统理论做为预设的前提，从交流理论 (communicative theory) 的方法作为出发点阐述了其[[2022050901]]卡片盒笔记系统的实证研究。
+- 信息只有在有**比较模式**的系统中才会产生，为提高交流的有效性，需在交流系统中加入**随机性**，想让一个交流系统要维持更长时间，需创造一个旨在长期、开放、主题不受限制（只有自我限制）的交流系统。长期使用Zettelkasten[[2022050901]]卡片盒笔记系统，会产生一种第二记忆，一个我们可以不断与之交流的另一个自我。它得到了自己的生命，独立于它的作者。每一张卡片都只是一个组成部分，它的质量只取决于系统内的链接和反向链接的网络。如果你想培养一个交流伙伴，最好从一开始就让他独立。Zettelkasten[[2022050901]]卡片盒笔记系统可以实现高度的**独立性**。当我们在写笔记或进行查询可以成功地激活**内部链接**网络时，交流就会变得更加富有成效。卡片盒提供了从未计划过的，从未预想过的信息组合的可能性。**与提供可实现连接的可能性的这种结构相比，笔记的重要性是次要的**。
 
 ## Excerpt
 - 不写作就不可能思考，至少不能用一种复杂的、网络化的方式思考。
@@ -32,11 +32,11 @@ tags:: Zettelkasten,Zettel
 - “研究与教学合一”（译者注：这是洪堡提出的现代大学理念）是随机效应产生的前沿的地方。我们认为，与卡片盒的交流可以被认为在功能上是等价的。而与其他方法相比，与卡片盒交流的方法在信息压缩、速度和相互适应性方面有许多优势。
 ## Question
 ## Extension
-- 文章中强调了“不写作就不可能思考，至少不能用一种复杂的、网络化的方式思考”，但这本身不是[Zettelkasten](2022050901.md)卡片盒笔记系统的目的和出发点，卡片盒笔记系统旨在创造一种思维工具。写作会成为这种思维工具的自然结果。从另一方面，写作会强化思考的模式或质量，这点让人联想到[费曼学习法](2022051701.md),可以去研究一下费曼学习法的有效性问题。从这个角度出发，带着写作（输出）的目标出发，可以强化卡片盒笔记系统的效果。
+- 文章中强调了“不写作就不可能思考，至少不能用一种复杂的、网络化的方式思考”，但这本身不是Zettelkasten[[2022050901]]卡片盒笔记系统的目的和出发点，卡片盒笔记系统旨在创造一种思维工具。写作会成为这种思维工具的自然结果。从另一方面，写作会强化思考的模式或质量，这点让人联想到费曼学习法[[2022051701]],可以去研究一下费曼学习法的有效性问题。从这个角度出发，带着写作（输出）的目标出发，可以强化卡片盒笔记系统的效果。
 - 交流理论
 - “研究与教学合一”（洪堡提出的现代大学理念）
 ## Links
-- [Zettelkasten](2022050901.md)
+- Zettelkasten[[2022050901]]
 ## Reference
 - 尼克拉斯-卢曼(Niklas Luhmann)本人所写的文章[Communicating with Slip Boxes](https://luhmann.surge.sh/communicating-with-slip-boxes)
 - [卢曼：与卡片盒交流](https://zhuanlan.zhihu.com/p/208063561)
