--- a/zettel/zettel/数字花园.md
+++ b/zettel/zettel/数字花园.md
@@ -1,8 +1,9 @@
 ---
-public:: true
-title:: Digital Garden
-alias:: 数字花园
-tags:: Zettel
+public:: true  
+title:: Digital Garden  
+alias:: 数字花园  
+tags:: Zettel  
+uid:: 2022051106  
 ---
 
 # Digital Garden
