--- a/zettel/zettel/卡片盒笔记系统.md
+++ b/zettel/zettel/卡片盒笔记系统.md
@@ -58,8 +58,8 @@ tags:: Zettel
 - **已解决**未解释卡片索引，或未展示卡片索引的样本
 
 ## Extension
-- 卢曼：学习如何阅读[[2022051104]]
-- 卢曼：与卡片盒交流[[2022051105]]
+- 卢曼：学习如何阅读[[卢曼：学习如何阅读]]
+- 卢曼：与卡片盒交流[[卢曼：与卡片盒交流]]
 
 ## Links
 
