--- a/zettel/zettel/卢曼：与卡片盒交流.md
+++ b/zettel/zettel/卢曼：与卡片盒交流.md
@@ -32,7 +32,7 @@ tags:: Zettelkasten,Zettel
 - “研究与教学合一”（译者注：这是洪堡提出的现代大学理念）是随机效应产生的前沿的地方。我们认为，与卡片盒的交流可以被认为在功能上是等价的。而与其他方法相比，与卡片盒交流的方法在信息压缩、速度和相互适应性方面有许多优势。
 ## Question
 ## Extension
-- 文章中强调了“不写作就不可能思考，至少不能用一种复杂的、网络化的方式思考”，但这本身不是Zettelkasten[[2022050901]]卡片盒笔记系统的目的和出发点，卡片盒笔记系统旨在创造一种思维工具。写作会成为这种思维工具的自然结果。从另一方面，写作会强化思考的模式或质量，这点让人联想到费曼学习法[[2022051701]],可以去研究一下费曼学习法的有效性问题。从这个角度出发，带着写作（输出）的目标出发，可以强化卡片盒笔记系统的效果。
+- 文章中强调了“不写作就不可能思考，至少不能用一种复杂的、网络化的方式思考”，但这本身不是Zettelkasten[[2022050901]]卡片盒笔记系统的目的和出发点，卡片盒笔记系统旨在创造一种思维工具。写作会成为这种思维工具的自然结果。从另一方面，写作会强化思考的模式或质量，这点让人联想到费曼学习法[[费曼学习法]],可以去研究一下费曼学习法的有效性问题。从这个角度出发，带着写作（输出）的目标出发，可以强化卡片盒笔记系统的效果。
 - 交流理论
 - “研究与教学合一”（洪堡提出的现代大学理念）
 ## Links
