--- a/zettel/zettel/卢曼：与卡片盒交流.md
+++ b/zettel/zettel/卢曼：与卡片盒交流.md
@@ -1,8 +1,8 @@
 ---
-public:: true
-title:: 卢曼：与卡片盒交流
-alias:: 
-tags:: Zettelkasten,Zettel
+public: true
+title: 卢曼：与卡片盒交流
+alias: 
+tags: Zettelkasten,Zettel
 ---
 
 # 卢曼：与卡片盒交流
