--- a/zettel/zettel/卢曼：学习如何阅读.md
+++ b/zettel/zettel/卢曼：学习如何阅读.md
@@ -1,8 +1,8 @@
 ---
-public:: true
-title:: 卢曼：学习如何阅读
-alias:: 
-tags:: Zettelkasten,Zettel
+public: true
+title: 卢曼：学习如何阅读
+alias: 
+tags: Zettelkasten,Zettel
 ---
 
 # 卢曼：学习如何阅读
