--- a/zettel/zettel/常青笔记.md
+++ b/zettel/zettel/常青笔记.md
@@ -1,8 +1,8 @@
 ---
-public:: true
-title:: Evergreen note
-alias:: 常青笔记
-tags:: Zettel
+public: true
+title: Evergreen note
+alias: 常青笔记
+tags: Zettel
 ---
 
 # Evergreen note
