--- a/zettel/zettel/树莓派使用.md
+++ b/zettel/zettel/树莓派使用.md
@@ -1,8 +1,8 @@
 ---
-public:: true
-title:: 树莓派使用
-alias:: 
-tags:: RaspberryPi,Zettel
+public: true
+title: 树莓派使用
+alias: 
+tags: RaspberryPi,Zettel
 ---
 
 # 树莓派使用
